# sagahalla-dapp

./: README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json  requirements.txt
backend/: .gitignore  Dockerfile  README.md  alembic.ini  main.py  mana_gov.db  pyproject.toml
backend/alembic/: env.py
backend/app/: app.py
backend/config/: loaders.yaml
backend/hackathon_proposal/: .~lock.HACKATHON_PROPOSAL.xlsx#  HACKATHON_PROPOSAL.xlsx  gen_proposal.py  hackathon_proposal.json
backend/hackathon_proposals/: HACKATHON_DEV_MANA_HOURS.xlsx  dev_report.py
backend/hackathon_proposals/dev_reports/: HACKATHON_DAVID_MANA_HOURS.xlsx  HACKATHON_EMMANUEL_MANA_HOURS.xlsx  HACKATHON_SHAWN_MANA_HOURS.xlsx  HACKATHON_WILL_MANA_HOURS.xlsx
backend/hackathon_proposals/output_reports/: HACKATHON_EMMANUEL_MANA_HOURS_report.json  HACKATHON_SHAWN_MANA_HOURS_report.json
backend/mana_algo/: dev_actual_report.py  dev_report.py  gen_proposal.py  models.py  project_budget.py  routes.py  token_scripts.py
backend/mana_algo/hackathon_proposals/: project_budget.py  role_multipliers.json
backend/mana_algo/proposals/: Dropped Text.txt  developer_token_purchases.json  hackathon_dev_project_budget.json  hackathon_proposal.json  role_multipliers.json
backend/mana_algo_archive_for_removal/: dev_budget_report.py  models.py
backend/mana_algo_archive_for_removal/mana_algo_inputs/: hackathon_proposal.json
backend/mana_algo_archive_for_removal/proposals/: HACKATHON_DEV_MANA_HOURS.xlsx  hackathon_mana_hours.json
backend/mana_gov/: app.py
backend/mana_gov/models/: user.py  (+6 more)
(+225 files in other folders)
